# imgui-toolkit

./: .gitignore  CMakeLists.txt  README.md  build.cpp  imtk.hpp
imtk/: CMakeLists.txt  errors.cpp  errors.hpp  id_scope.cpp  id_scope.hpp  include.hpp  instance_guard.hpp  instance_stack.hpp  os_window.cpp  os_window.hpp
